[BUG #7771]  Scrollbar not working on Windows Phone 8 - Fixed canvas for Windows Phone 8

--- a/framework/source/resource/qx/mobile/scss/common/_main.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_main.scss
@@ -73,6 +73,10 @@ img.no-content {
   position:relative;
 }
 
+.root canvas {
+  -ms-touch-action: none;
+}
+
 // ANDROID BUGFIXES
 
 // Bugfix for Android 2.x, adds a scale(1) to the element,
